# LearningRust

aibodhs-guide-project/: Cargo.toml  credits.txt  readme.md
aibodhs-guide-project/src/: main.rs  map.rs  player.rs
aibodhs-guide-project/src/map/: assets.rs  generate.rs  models.rs  rules.rs  sockets.rs  tilemap.rs
chapter_8_exercise/: Cargo.toml
chapter_8_exercise/src/: employee_map.rs  main.rs  median_mode.rs  median_mode_tests.rs  pig_latin.rs
guessing_game/src/: main.rs
hello_http/: 404.html  Cargo.toml  hello.html
hello_http/src/: lib.rs  main.rs
minigrep/src/: lib.rs  main.rs
my_bevy_game/: Cargo.toml
my_bevy_game/src/: main.rs
