[package]
name = "Aibodhs-guide-project"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking"] }
bevy_procedural_tilemaps = "0.1.3"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
                            # im sorry i just cant stand the idiomatic return
needless_return = "allow"   # thankfully this is a personal project so i can do whatever i want sue me